[package]
name = "reflector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
calamine = "0.27.0"
headless_chrome = "1.0.15"
lopdf = "0.34.0"
nanoid = "0.4.0"
quick-xml = "0.37.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tera = "1.20.0"

[tests]
name = "integration"
path = "tests/integration_test.rs"
